// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignIn renders SignIn with desktop view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="width: 100%; display: flex; flex-direction: column; min-height: 100vh; background-color: rgb(239, 241, 249); align-items: center;"
      >
        <div
          class="sc-gXSDep irWTtX"
        >
          <div
            class="sc-beqWNU hnIjJd"
          >
            Sign Up
          </div>
          <div
            class="sc-dmqGRC jCARNj"
          >
            Please enter your details to sign up
          </div>
          <div
            style="margin-bottom: 16px; margin-top: 32px;"
          >
            <div
              class="sc-gueXAH gRHGwY"
            >
              Email
            </div>
            <input
              class="sc-iAEzLF gTKcTi"
              placeholder="Enter your email..."
              style="max-width: 320px; min-width: 200px; width: 80vw;"
              type="text"
              value=""
            />
          </div>
          <div
            style="margin-bottom: 12px;"
          >
            <div
              class="sc-gueXAH gRHGwY"
            >
              Password
            </div>
            <input
              class="sc-iAEzLF gTKcTi"
              placeholder="Enter your password..."
              style="max-width: 320px; min-width: 200px; width: 80vw;"
              type="password"
              value=""
            />
          </div>
          <div
            style="margin-bottom: 12px;"
          >
            <div
              class="sc-gueXAH gRHGwY"
            >
              Confirm Password
            </div>
            <input
              class="sc-iAEzLF gTKcTi"
              placeholder="Enter your password..."
              style="max-width: 320px; min-width: 200px; width: 80vw;"
              type="password"
              value=""
            />
          </div>
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            disabled=""
            style="margin-top: 32px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw; background-color: rgb(182, 180, 185);"
            type="submit"
          >
            Sign up
          </button>
          <div
            class="sc-cCYzbQ cRcKRC"
          >
            Already have an account? 
            <a
              href="/sign-in"
            >
              Sign In
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="width: 100%; display: flex; flex-direction: column; min-height: 100vh; background-color: rgb(239, 241, 249); align-items: center;"
    >
      <div
        class="sc-gXSDep irWTtX"
      >
        <div
          class="sc-beqWNU hnIjJd"
        >
          Sign Up
        </div>
        <div
          class="sc-dmqGRC jCARNj"
        >
          Please enter your details to sign up
        </div>
        <div
          style="margin-bottom: 16px; margin-top: 32px;"
        >
          <div
            class="sc-gueXAH gRHGwY"
          >
            Email
          </div>
          <input
            class="sc-iAEzLF gTKcTi"
            placeholder="Enter your email..."
            style="max-width: 320px; min-width: 200px; width: 80vw;"
            type="text"
            value=""
          />
        </div>
        <div
          style="margin-bottom: 12px;"
        >
          <div
            class="sc-gueXAH gRHGwY"
          >
            Password
          </div>
          <input
            class="sc-iAEzLF gTKcTi"
            placeholder="Enter your password..."
            style="max-width: 320px; min-width: 200px; width: 80vw;"
            type="password"
            value=""
          />
        </div>
        <div
          style="margin-bottom: 12px;"
        >
          <div
            class="sc-gueXAH gRHGwY"
          >
            Confirm Password
          </div>
          <input
            class="sc-iAEzLF gTKcTi"
            placeholder="Enter your password..."
            style="max-width: 320px; min-width: 200px; width: 80vw;"
            type="password"
            value=""
          />
        </div>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          disabled=""
          style="margin-top: 32px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw; background-color: rgb(182, 180, 185);"
          type="submit"
        >
          Sign up
        </button>
        <div
          class="sc-cCYzbQ cRcKRC"
        >
          Already have an account? 
          <a
            href="/sign-in"
          >
            Sign In
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SignIn renders SignIn with mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="width: 100%; display: flex; flex-direction: column; min-height: 100vh; background-color: rgb(239, 241, 249); align-items: center;"
      >
        <div
          class="sc-gXSDep ldJKQh"
        >
          <div
            class="sc-beqWNU hnIjJd"
          >
            Sign Up
          </div>
          <div
            class="sc-dmqGRC jCARNj"
          >
            Please enter your details to sign up
          </div>
          <div
            style="margin-bottom: 16px; margin-top: 32px;"
          >
            <div
              class="sc-gueXAH gRHGwY"
            >
              Email
            </div>
            <input
              class="sc-iAEzLF gTKcTi"
              placeholder="Enter your email..."
              style="min-height: 48px; min-width: 320px;"
              type="text"
              value=""
            />
          </div>
          <div
            style="margin-bottom: 12px;"
          >
            <div
              class="sc-gueXAH gRHGwY"
            >
              Password
            </div>
            <input
              class="sc-iAEzLF gTKcTi"
              placeholder="Enter your password..."
              style="min-height: 48px; min-width: 320px;"
              type="password"
              value=""
            />
          </div>
          <div
            style="margin-bottom: 12px;"
          >
            <div
              class="sc-gueXAH gRHGwY"
            >
              Confirm Password
            </div>
            <input
              class="sc-iAEzLF gTKcTi"
              placeholder="Enter your password..."
              style="min-height: 48px; min-width: 320px;"
              type="password"
              value=""
            />
          </div>
          <button
            buttontype="primary"
            class="sc-gLDymS dItXMH"
            disabled=""
            style="margin-top: 32px; margin-bottom: 16px; width: 320px; background-color: rgb(182, 180, 185);"
            type="submit"
          >
            Sign up
          </button>
          <div
            class="sc-cCYzbQ cRcKRC"
          >
            Already have an account? 
            <a
              href="/sign-in"
            >
              Sign In
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="width: 100%; display: flex; flex-direction: column; min-height: 100vh; background-color: rgb(239, 241, 249); align-items: center;"
    >
      <div
        class="sc-gXSDep ldJKQh"
      >
        <div
          class="sc-beqWNU hnIjJd"
        >
          Sign Up
        </div>
        <div
          class="sc-dmqGRC jCARNj"
        >
          Please enter your details to sign up
        </div>
        <div
          style="margin-bottom: 16px; margin-top: 32px;"
        >
          <div
            class="sc-gueXAH gRHGwY"
          >
            Email
          </div>
          <input
            class="sc-iAEzLF gTKcTi"
            placeholder="Enter your email..."
            style="min-height: 48px; min-width: 320px;"
            type="text"
            value=""
          />
        </div>
        <div
          style="margin-bottom: 12px;"
        >
          <div
            class="sc-gueXAH gRHGwY"
          >
            Password
          </div>
          <input
            class="sc-iAEzLF gTKcTi"
            placeholder="Enter your password..."
            style="min-height: 48px; min-width: 320px;"
            type="password"
            value=""
          />
        </div>
        <div
          style="margin-bottom: 12px;"
        >
          <div
            class="sc-gueXAH gRHGwY"
          >
            Confirm Password
          </div>
          <input
            class="sc-iAEzLF gTKcTi"
            placeholder="Enter your password..."
            style="min-height: 48px; min-width: 320px;"
            type="password"
            value=""
          />
        </div>
        <button
          buttontype="primary"
          class="sc-gLDymS dItXMH"
          disabled=""
          style="margin-top: 32px; margin-bottom: 16px; width: 320px; background-color: rgb(182, 180, 185);"
          type="submit"
        >
          Sign up
        </button>
        <div
          class="sc-cCYzbQ cRcKRC"
        >
          Already have an account? 
          <a
            href="/sign-in"
          >
            Sign In
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
